grpc-test/server-envoy-proxy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8811
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                tracing:
                  operation_name: ingress
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                      path: "/dev/stdout"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            cluster: backend_grpc_service
                            timeout:
                              seconds: 60
                          decorator:
                            operation: checkAvailability
                http_filters:
                  - name: envoy.router
                    typed_config: {}
  clusters:
    - name: backend_grpc_service
      connect_timeout: 0.250s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: service1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: grpc-test
                      port_value: 8081
#              - endpoint:
#                  address:
#                    socket_address:
#                      address: grpc-test
#                      port_value: 9999
#      hosts:
#        - socket_address:
#            address: grpc-test
#            port_value: 8081
#        - socket_address:
#            address: grpc-test
#            port_value: 9999

tracing:
  http:
    name: envoy.dynamic.ot
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v2.DynamicOtConfig
      library: /usr/local/lib/libjaegertracing_plugin.so
      config:
        service_name: grpc-test
        sampler:
          type: const
          param: 1
        reporter:
          localAgentHostPort: 192.168.0.38:6831
        headers:
          jaegerDebugHeader: jaeger-debug-id
          jaegerBaggageHeader: jaeger-baggage
          traceBaggageHeaderPrefix: uberctx-
        baggage_restrictions:
          denyBaggageOnInitializationFailure: false
          hostPort: ""

admin:
  #  access_log_path: "/tmp/admin_access.log"
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8881
